--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-SocketIO==4.3.1
 gevent==20.6.2
 gevent-websocket==0.10.1
 greenlet==0.4.16
+gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
